--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 4 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-InternetBankingV1" class="navigator-link">
-              <span class="suite-name border-failed">InternetBankingV1</span>
+              <span class="suite-name border-passed">InternetBankingV1</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,36 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods, 4 failed,   3 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-InternetBankingV1" class="hide-methods failed suite-InternetBankingV1"> (hide)</a> <!-- hide-methods failed suite-InternetBankingV1 -->
-                      <a href="#" panel-name="suite-InternetBankingV1" class="show-methods failed suite-InternetBankingV1"> (show)</a> <!-- show-methods failed suite-InternetBankingV1 -->
-                    </span>
-                    <div class="method-list-content failed suite-InternetBankingV1">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginDDT_002" class="method navigator-link" hash-for-method="loginDDT(mngr83460, qAbUzyj)">loginDDT(mngr83460, qAbUzyj)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginDDT_002" class="method navigator-link" hash-for-method="loginDDT(mngr164225, jahetAp)">loginDDT(mngr164225, jahetAp)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginDDT_002" class="method navigator-link" hash-for-method="loginDDT(mngr112909, tytUreg)">loginDDT(mngr112909, tytUreg)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginDDT_002" class="method navigator-link" hash-for-method="loginDDT(mngr164225, jahetAp)">loginDDT(mngr164225, jahetAp)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-InternetBankingV1 -->
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -134,6 +105,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_AddCustomerTest_003" class="method navigator-link" hash-for-method="addNewCustomer">addNewCustomer</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginDDT_002" class="method navigator-link" hash-for-method="loginDDT(mngr258528, mEmYsUj)">loginDDT(mngr258528, mEmYsUj)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -158,66 +134,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-InternetBankingV1" class="panel InternetBankingV1">
-          <div class="suite-InternetBankingV1-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.internetBanking.testCases.TC_LoginDDT_002</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr83460, qAbUzyj)">
-                  </a> <!-- loginDDT(mngr83460, qAbUzyj) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr83460, qAbUzyj)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.internetBanking.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:31)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr164225, jahetAp)">
-                  </a> <!-- loginDDT(mngr164225, jahetAp) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr164225, jahetAp)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.internetBanking.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:31)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr112909, tytUreg)">
-                  </a> <!-- loginDDT(mngr112909, tytUreg) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr112909, tytUreg)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.internetBanking.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:31)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr164225, jahetAp)">
-                  </a> <!-- loginDDT(mngr164225, jahetAp) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr164225, jahetAp)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.internetBanking.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:31)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-InternetBankingV1-class-failed -->
           <div class="suite-InternetBankingV1-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -254,6 +170,14 @@
               <span class="class-name">com.internetBanking.testCases.TC_LoginDDT_002</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginDDT(mngr258528, mEmYsUj)">
+                  </a> <!-- loginDDT(mngr258528, mEmYsUj) -->
+                  <span class="method-name">loginDDT</span>
+                  <span class="parameters">(mngr258528, mEmYsUj)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="loginDDT(mngr258528, mEmYsUj)">
@@ -322,40 +246,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addNewCustomer')
 data.setCell(0, 2, 'com.internetBanking.testCases.TC_AddCustomerTest_003')
-data.setCell(0, 3, 15275);
+data.setCell(0, 3, 14520);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginDDT')
 data.setCell(1, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
-data.setCell(1, 3, 8211);
+data.setCell(1, 3, 7831);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginTest')
-data.setCell(2, 2, 'com.internetBanking.testCases.TC_LoginTest_001')
-data.setCell(2, 3, 6836);
+data.setCell(2, 1, 'loginDDT')
+data.setCell(2, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
+data.setCell(2, 3, 7802);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginDDT')
-data.setCell(3, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
-data.setCell(3, 3, 5124);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginDDT')
-data.setCell(4, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
-data.setCell(4, 3, 4146);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'loginDDT')
-data.setCell(5, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
-data.setCell(5, 3, 4078);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'loginDDT')
-data.setCell(6, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
-data.setCell(6, 3, 4078);
+data.setCell(3, 1, 'loginTest')
+data.setCell(3, 2, 'com.internetBanking.testCases.TC_LoginTest_001')
+data.setCell(3, 3, 6822);
 window.suiteTableData['InternetBankingV1']= { tableData: data, tableDiv: 'times-div-InternetBankingV1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 seconds</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-InternetBankingV1">
               </div> <!-- times-div-InternetBankingV1 -->
             </div> <!-- times-div -->
@@ -406,52 +318,32 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">7774 ms</span>
+                <span class="method-start">7599 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.internetBanking.testCases.TC_LoginDDT_002</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr164225, jahetAp)</span>
-                <span class="method-start">16838 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr83460, qAbUzyj)</span>
-                <span class="method-start">21966 ms</span>
+                <span class="method-name">loginDDT(mngr258528, mEmYsUj)</span>
+                <span class="method-start">16101 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginDDT(mngr258528, mEmYsUj)</span>
-                <span class="method-start">26115 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr164225, jahetAp)</span>
-                <span class="method-start">34328 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr112909, tytUreg)</span>
-                <span class="method-start">38411 ms</span>
+                <span class="method-start">23906 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.internetBanking.testCases.TC_AddCustomerTest_003</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">addNewCustomer</span>
-                <span class="method-start">42496 ms</span>
+                <span class="method-start">31740 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.internetBanking.testCases.TC_LoginTest_001</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">57773 ms</span>
+                <span class="method-start">46261 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
