--- a/test-output/old/InternetBankingV1/methods-alphabetical.html
+++ b/test-output/old/InternetBankingV1/methods-alphabetical.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>InternetBankingV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4c3a9">  <td>20/05/04 18:26:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.internetBanking.testCases.TC_AddCustomerTest_003@5f9b2141]">addNewCustomer</td> 
-  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>20/05/04 18:26:33</td>   <td>-25658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@550ee7e5]">loginDDT</td> 
-  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>20/05/04 18:26:38</td>   <td>-20530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@550ee7e5]">loginDDT</td> 
-  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>20/05/04 18:26:42</td>   <td>-16381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@550ee7e5]">loginDDT</td> 
-  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>20/05/04 18:26:50</td>   <td>-8168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@550ee7e5]">loginDDT</td> 
-  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>20/05/04 18:26:54</td>   <td>-4085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@550ee7e5]">loginDDT</td> 
-  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>20/05/04 18:26:24</td>   <td>-34722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@15bbf42f]">loginTest</td> 
-  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="677d7f">  <td>20/05/04 18:26:16</td>   <td>-42479</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@15bbf42f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1230955136</td>   <td></td> </tr>
-<tr bgcolor="677d7f">  <td>20/05/04 18:27:14</td>   <td>15277</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@15bbf42f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1230955136</td>   <td></td> </tr>
+<tr bgcolor="90806a">  <td>20/05/04 20:36:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.internetBanking.testCases.TC_AddCustomerTest_003@15bbf42f]">addNewCustomer</td> 
+  <td>main@1594873248</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>20/05/04 20:36:39</td>   <td>-15639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@2dde1bff]">loginDDT</td> 
+  <td>main@1594873248</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>20/05/04 20:36:47</td>   <td>-7834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@2dde1bff]">loginDDT</td> 
+  <td>main@1594873248</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>20/05/04 20:36:31</td>   <td>-24141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">loginTest</td> 
+  <td>main@1594873248</td>   <td></td> </tr>
+<tr bgcolor="bb89bb">  <td>20/05/04 20:36:23</td>   <td>-31730</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594873248</td>   <td></td> </tr>
+<tr bgcolor="bb89bb">  <td>20/05/04 20:37:10</td>   <td>14522</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594873248</td>   <td></td> </tr>
 </table>
