Created new page object and new testcase

--- a/test-output/old/InternetBankingV1/methods-not-run.html
+++ b/test-output/old/InternetBankingV1/methods-not-run.html
@@ -1,6 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.internetBanking.testCases.BaseClass.setup</td></tr>
 <tr><td>com.internetBanking.testCases.BaseClass.setup</td></tr>
-<tr><td>com.internetBanking.testCases.BaseClass.tearDown</td></tr>
-<tr><td>com.internetBanking.testCases.BaseClass.tearDown</td></tr>
+<tr><td>com.internetBanking.testCases.BaseClass.setup</td></tr>
 </table>
