--- a/test-output/old/InternetBankingV1/methods.html
+++ b/test-output/old/InternetBankingV1/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>InternetBankingV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb89bb">  <td>20/05/04 20:36:23</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594873248</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>20/05/04 20:36:31</td>   <td>7589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">loginTest</td> 
-  <td>main@1594873248</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>20/05/04 20:36:39</td>   <td>16091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@2dde1bff]">loginDDT</td> 
-  <td>main@1594873248</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>20/05/04 20:36:47</td>   <td>23896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@2dde1bff]">loginDDT</td> 
-  <td>main@1594873248</td>   <td></td> </tr>
-<tr bgcolor="90806a">  <td>20/05/04 20:36:55</td>   <td>31730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.internetBanking.testCases.TC_AddCustomerTest_003@15bbf42f]">addNewCustomer</td> 
-  <td>main@1594873248</td>   <td></td> </tr>
-<tr bgcolor="bb89bb">  <td>20/05/04 20:37:10</td>   <td>46252</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594873248</td>   <td></td> </tr>
+<tr bgcolor="e5f797">  <td>20/05/06 00:18:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1692885405</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>20/05/06 00:19:05</td>   <td>10774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.internetBanking.testCases.TC_LoginTest_001@10163d6]">loginTest</td> 
+  <td>main@1692885405</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>20/05/06 00:19:09</td>   <td>15185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@2dde1bff]">loginDDT</td> 
+  <td>main@1692885405</td>   <td></td> </tr>
+<tr bgcolor="7194ba">  <td>20/05/06 00:19:18</td>   <td>24285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.internetBanking.testCases.TC_LoginDDT_002@2dde1bff]">loginDDT</td> 
+  <td>main@1692885405</td>   <td></td> </tr>
+<tr bgcolor="90806a">  <td>20/05/06 00:19:26</td>   <td>32046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.internetBanking.testCases.TC_AddCustomerTest_003@15bbf42f]">addNewCustomer</td> 
+  <td>main@1692885405</td>   <td></td> </tr>
+<tr bgcolor="8f6f80">  <td>20/05/06 00:19:43</td>   <td>48831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_EditCustomerTest_004.editCustomer()[pri:0, instance:com.internetBanking.testCases.TC_EditCustomerTest_004@550ee7e5]">editCustomer</td> 
+  <td>main@1692885405</td>   <td></td> </tr>
 </table>
