--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-InternetBankingV1">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_AddCustomerTest_003" class="method navigator-link" hash-for-method="addNewCustomer">addNewCustomer</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_EditCustomerTest_004" class="method navigator-link" hash-for-method="editCustomer">editCustomer</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginDDT_002" class="method navigator-link" hash-for-method="loginDDT(mngr258528, mEmYsUj)">loginDDT(mngr258528, mEmYsUj)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginDDT_002" class="method navigator-link" hash-for-method="loginDDT(mngr258528, mEmYsUj)">loginDDT(mngr258528, mEmYsUj)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_LoginTest_001" class="method navigator-link" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-InternetBankingV1" title="com.internetBanking.testCases.TC_DeleteCustomerTest_005" class="method navigator-link" hash-for-method="deleteCustomer">deleteCustomer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-InternetBankingV1 -->
@@ -142,68 +122,14 @@
           <div class="suite-InternetBankingV1-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.internetBanking.testCases.TC_LoginTest_001</span>
+              <span class="class-name">com.internetBanking.testCases.TC_DeleteCustomerTest_005</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTest">
-                  </a> <!-- loginTest -->
-                  <span class="method-name">loginTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-InternetBankingV1-class-passed -->
-          <div class="suite-InternetBankingV1-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.internetBanking.testCases.TC_AddCustomerTest_003</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="addNewCustomer">
-                  </a> <!-- addNewCustomer -->
-                  <span class="method-name">addNewCustomer</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-InternetBankingV1-class-passed -->
-          <div class="suite-InternetBankingV1-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.internetBanking.testCases.TC_LoginDDT_002</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr258528, mEmYsUj)">
-                  </a> <!-- loginDDT(mngr258528, mEmYsUj) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr258528, mEmYsUj)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr258528, mEmYsUj)">
-                  </a> <!-- loginDDT(mngr258528, mEmYsUj) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr258528, mEmYsUj)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-InternetBankingV1-class-passed -->
-          <div class="suite-InternetBankingV1-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.internetBanking.testCases.TC_EditCustomerTest_004</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="editCustomer">
-                  </a> <!-- editCustomer -->
-                  <span class="method-name">editCustomer</span>
+                  <a name="deleteCustomer">
+                  </a> <!-- deleteCustomer -->
+                  <span class="method-name">deleteCustomer</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -224,10 +150,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.internetBanking.testCases.TC_LoginTest_001&quot;/&gt;
-      &lt;class name=&quot;com.internetBanking.testCases.TC_LoginDDT_002&quot;/&gt;
-      &lt;class name=&quot;com.internetBanking.testCases.TC_AddCustomerTest_003&quot;/&gt;
-      &lt;class name=&quot;com.internetBanking.testCases.TC_EditCustomerTest_004&quot;/&gt;
+      &lt;class name=&quot;com.internetBanking.testCases.TC_DeleteCustomerTest_005&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- InternetBankingV1 --&gt;
@@ -241,7 +164,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (4 classes)</span>
+                <span class="test-name">Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -267,32 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addNewCustomer')
-data.setCell(0, 2, 'com.internetBanking.testCases.TC_AddCustomerTest_003')
-data.setCell(0, 3, 16780);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginDDT')
-data.setCell(1, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
-data.setCell(1, 3, 9097);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginDDT')
-data.setCell(2, 2, 'com.internetBanking.testCases.TC_LoginDDT_002')
-data.setCell(2, 3, 7758);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'editCustomer')
-data.setCell(3, 2, 'com.internetBanking.testCases.TC_EditCustomerTest_004')
-data.setCell(3, 3, 4645);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginTest')
-data.setCell(4, 2, 'com.internetBanking.testCases.TC_LoginTest_001')
-data.setCell(4, 3, 2748);
+data.setCell(0, 1, 'deleteCustomer')
+data.setCell(0, 2, 'com.internetBanking.testCases.TC_DeleteCustomerTest_005')
+data.setCell(0, 3, 10553);
 window.suiteTableData['InternetBankingV1']= { tableData: data, tableDiv: 'times-div-InternetBankingV1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 41 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-InternetBankingV1">
               </div> <!-- times-div-InternetBankingV1 -->
             </div> <!-- times-div -->
@@ -307,30 +214,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-InternetBankingV1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.internetBanking.testCases.TC_AddCustomerTest_003</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">setup</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.internetBanking.testCases.TC_LoginDDT_002</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">setup</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.internetBanking.testCases.TC_EditCustomerTest_004</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">setup</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-InternetBankingV1" class="panel">
@@ -339,40 +225,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.internetBanking.testCases.TC_LoginTest_001</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.internetBanking.testCases.TC_DeleteCustomerTest_005</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">loginTest</span>
-                <span class="method-start">10783 ms</span>
+                <span class="method-name">deleteCustomer</span>
+                <span class="method-start">11904 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.internetBanking.testCases.TC_LoginDDT_002</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">loginDDT(mngr258528, mEmYsUj)</span>
-                <span class="method-start">15194 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">loginDDT(mngr258528, mEmYsUj)</span>
-                <span class="method-start">24294 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.internetBanking.testCases.TC_AddCustomerTest_003</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">addNewCustomer</span>
-                <span class="method-start">32055 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.internetBanking.testCases.TC_EditCustomerTest_004</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">editCustomer</span>
-                <span class="method-start">48840 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">22496 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
