--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">InternetBankingV1</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">53,713</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">23,891</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">InternetBankingV1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.internetBanking.testCases.TC_AddCustomerTest_003</td><td><a href="#m0">addNewCustomer</a></td><td rowspan="1">1588742366290</td><td rowspan="1">16780</td></tr><tr class="passedodd"><td rowspan="1">com.internetBanking.testCases.TC_EditCustomerTest_004</td><td><a href="#m1">editCustomer</a></td><td rowspan="1">1588742383075</td><td rowspan="1">4645</td></tr><tr class="passedeven"><td rowspan="2">com.internetBanking.testCases.TC_LoginDDT_002</td><td><a href="#m2">loginDDT</a></td><td rowspan="2">1588742358529</td><td rowspan="2">7758</td></tr><tr class="passedeven"><td><a href="#m3">loginDDT</a></td></tr><tr class="passedodd"><td rowspan="1">com.internetBanking.testCases.TC_LoginTest_001</td><td><a href="#m4">loginTest</a></td><td rowspan="1">1588742345018</td><td rowspan="1">2748</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">InternetBankingV1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.internetBanking.testCases.TC_DeleteCustomerTest_005</td><td><a href="#m0">deleteCustomer</a></td><td rowspan="1">1588802121211</td><td rowspan="1">10553</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.internetBanking.testCases.TC_AddCustomerTest_003#addNewCustomer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.internetBanking.testCases.TC_EditCustomerTest_004#editCustomer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.internetBanking.testCases.TC_LoginDDT_002#loginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>mngr258528</td><td>mEmYsUj</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.internetBanking.testCases.TC_LoginDDT_002#loginDDT</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>mngr258528</td><td>mEmYsUj</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.internetBanking.testCases.TC_LoginTest_001#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.internetBanking.testCases.TC_DeleteCustomerTest_005#deleteCustomer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
